<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView

        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true"
        android:overScrollMode="never"
        android:scrollbars="none"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp">

            <Button
                android:id="@+id/ghost"
                android:textColor="#000000"
                android:text="@string/ghost_pepper_by_asiier"
                android:layout_height="60dp"
                android:textSize="18sp"
                android:textAllCaps="false"
                android:fontFamily="sans-serif-medium"
                android:drawableStart="@drawable/ic_005"
                android:gravity="start|center_vertical"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent" />
            <Button
                android:id="@+id/fusionbalanced"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textAllCaps="false"
                android:gravity="start|center_vertical"
                android:fontFamily="sans-serif-medium"
                android:drawableStart="@drawable/ic_005"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:text="@string/fusion_balanced_by_patalao" />
            <Button
                android:id="@+id/namelessbalanced"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textAllCaps="false"
                android:fontFamily="sans-serif-medium"
                android:drawableStart="@drawable/ic_004"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:gravity="start|center_vertical"
                android:text="@string/nameless_balanced_by_n_senthil360" />
            <Button
                android:id="@+id/hawk"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textAllCaps="false"
                android:fontFamily="sans-serif-medium"
                android:drawableStart="@drawable/ic_004"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:gravity="start|center_vertical"
                android:text="@string/hawkpepper_by_asiier" />
            <Button
                android:id="@+id/zhanabalanced"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textAllCaps="false"
                android:fontFamily="sans-serif-medium"
                android:drawableStart="@drawable/ic_003"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:gravity="start|center_vertical"
                android:text="@string/project_zhana_balanced_by_asiier" />
            <Button
                android:id="@+id/xhanabalanced"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textAllCaps="false"
                android:fontFamily="sans-serif-medium"
                android:drawableStart="@drawable/ic_003"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:gravity="start|center_vertical"
                android:text="@string/project_x_a_n_a_balanced_by_n_asiier" />
            <View
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="#00000000" />
            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:fontFamily="sans-serif-medium"
                android:textColor="#000"
                android:background="@drawable/frame"
                android:text="@string/nota" />

        </LinearLayout>
    </ScrollView>
</android.support.design.widget.CoordinatorLayout>