<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView

        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true"
        android:overScrollMode="never"
        android:scrollbars="none"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp">

            <Button
                android:id="@+id/bp4"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textAllCaps="false"
                android:fontFamily="sans-serif-medium"
                android:drawableStart="@drawable/ic_007"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:gravity="start|center_vertical"
                android:text="@string/burnout_pr4_by_mostafa_wael" />
            <Button
                android:id="@+id/namelessperformance"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textAllCaps="false"
                android:fontFamily="sans-serif-medium"
                android:drawableStart="@drawable/ic_006"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:gravity="start|center_vertical"
                android:text="@string/nameless_performance_by_n_senthil360" />
            <Button
                android:id="@+id/fusionperformance"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textAllCaps="false"
                android:fontFamily="sans-serif-medium"
                android:drawableStart="@drawable/ic_006"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:gravity="start|center_vertical"
                android:text="@string/fusion_performance_by_patalao" />
            <View
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="#00000000" />
            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="#000"
                android:fontFamily="sans-serif-medium"
                android:background="@drawable/frame"
                android:text="@string/nota" />

            <View
                android:layout_width="match_parent"
                android:layout_height="8dp"
                android:background="#00000000" />
            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="#000"
                android:fontFamily="sans-serif-medium"
                android:background="@drawable/frame"
                android:text="@string/nota2" />
        </LinearLayout>
    </ScrollView>
</android.support.design.widget.CoordinatorLayout>